Morris Tailwind webpages

--- a/about.html
+++ b/about.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>
+        
+    </title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+
+            <!--mobile nav-->
+            <div>
+                <img src="images/favicon.png" alt="website logo">
+            </div>
+            <div>
+                <img src="images/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="hamburger">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="#">OUR TEAM</a></li>
+                    <div class="">
+                        <button class="peer border-none">
+                            SERVICE
+                        </button>
+                    </div>
+                    <div class="peer-hover:flex hover:flex absolute flex-col hidden text-slate-800">
+                        <a href="#">Community Associations</a>
+                        <a href="#">Attorney & Legal Practices</a>
+                        <a href="#">Homeowners & Residential</a>
+                        <a href="#">Commercial Industrial & Institutional</a>
+                        <a href="#">Resources & Literature</a>
+                    </div>
+                </ul>
+            </div>
+        </nav>
+    </header>   
+    <main>
+
+    </main> 
+    <footer>
+
+    </footer>
 </body>
 </html>
